--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -317,8 +317,7 @@ jobs:
           echo "== Verify after switch =="
           if ! curl -fsS "${IDLE_HEALTH}" >/dev/null; then
           echo "FAIL: Post-switch health -> rollback upstream"
-          sudo sed -i -E "0,/127\\.0\\.0\\.1:[0-9]+/s//127.0.0.1:${ACTIVE_PORT}/" "${UPSTREAM_CONF}"
-          sudo nginx -t
+          sudo sed -i -E "0,/127\\.0\\.0\\.1:(8080|8081)/s//127.0.0.1:${ACTIVE_PORT}/" "${UPSTREAM_CONF}"          sudo nginx -t
           sudo systemctl reload nginx || sudo nginx -s reload
           exit 1
           fi
