--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -319,7 +319,7 @@ jobs:
           # echo "FAIL: Post-switch health -> rollback upstream"
           # sudo sed -i -E "0,/127\\.0\\.0\\.1:(8080|8081)/s//127.0.0.1:${ACTIVE_PORT}/" "${UPSTREAM_CONF}"          
           # sudo nginx -t
-          # sudo systemctl reload nginx || sudo nginx -s reload
+          # sudo systemctl reload nginx || sudo nginx -s reload-
           # exit 1
           # fi
           
