--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -296,18 +296,18 @@ jobs:
 
           pm2 delete "${IDLE_PM2}" >/dev/null 2>&1 || true
           pm2 start "${APP_DIR}/ecosystem.config.js" --only "${IDLE_PM2}" --env production          
-          # echo "== Health check IDLE (max 60s) =="
-          # for i in {1..30}; do
-          # if curl -fsS "${IDLE_HEALTH}" >/dev/null; then
-          # echo "Health OK"
-          # break
-          # fi
-          # sleep 2
-          # done
-          # curl -fsS "${IDLE_HEALTH}" >/dev/null || {
-          # echo "FAIL: Health check";
-          # exit 1;
-          # }
+          echo "== Health check IDLE (max 60s) =="
+          for i in {1..30}; do
+          if curl -fsS "${IDLE_HEALTH}" >/dev/null; then
+          echo "Health OK"
+          break
+          fi
+          sleep 2
+          done
+          curl -fsS "${IDLE_HEALTH}" >/dev/null || {
+          echo "FAIL: Health check";
+          exit 1;
+          }
           
           echo "== Switch Nginx upstream -> ${IDLE_PORT} =="
           sudo sed -i -E "0,/127\\.0\\.0\\.1:[0-9]+/s//127.0.0.1:${IDLE_PORT}/" "${UPSTREAM_CONF}"
@@ -315,13 +315,13 @@ jobs:
           sudo systemctl reload nginx || sudo nginx -s reload
           
           echo "== Verify after switch =="
-          # if ! curl -fsS "${IDLE_HEALTH}" >/dev/null; then
-          # echo "FAIL: Post-switch health -> rollback upstream"
-          # sudo sed -i -E "0,/127\\.0\\.0\\.1:(8080|8081)/s//127.0.0.1:${ACTIVE_PORT}/" "${UPSTREAM_CONF}"          
-          # sudo nginx -t
-          # sudo systemctl reload nginx || sudo nginx -s reload-
-          # exit 1
-          # fi
+          if ! curl -fsS "${IDLE_HEALTH}" >/dev/null; then
+          echo "FAIL: Post-switch health -> rollback upstream"
+          sudo sed -i -E "0,/127\\.0\\.0\\.1:(8080|8081)/s//127.0.0.1:${ACTIVE_PORT}/" "${UPSTREAM_CONF}"          
+          sudo nginx -t
+          sudo systemctl reload nginx || sudo nginx -s reload-
+          exit 1
+          fi
           
           echo "== Stop OLD process: ${ACTIVE_PM2} =="
           pm2 delete "${ACTIVE_PM2}" >/dev/null 2>&1 || true
