--- a/.github/workflows/be-bigbang-ci.yml
+++ b/.github/workflows/be-bigbang-ci.yml
@@ -6,6 +6,10 @@ on:
   push:
     branches: [develop, main, 'release/**']
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   be:
     runs-on: ubuntu-latest
