--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -4,8 +4,6 @@ on:
     branches:
       - 'release/**'
       - 'main'
-      - 'feature/cicd-merge'  ## test로 돌려보기용
-
 permissions:
   contents: read
   id-token: write
@@ -137,7 +135,7 @@ jobs:
     name: Deploy to GCP (main)
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/feature/cicd-merge') }}
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main') }}
     env:
       GCP_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
       GCP_ZONE: ${{ secrets.GCP_ZONE }}
