--- a/build.gradle
+++ b/build.gradle
@@ -129,9 +129,14 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-
     // Spring Security
     implementation "org.springframework.boot:spring-boot-starter-security"
+
+    // Monitoring (로이 추가)
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation "io.micrometer:micrometer-registry-prometheus"
+
+
 }
 
 tasks.named('test') {
