--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -75,6 +75,13 @@ jobs:
           name: be-app-build
           path: .
 
+      - name: Connect to Tailscale
+        uses: tailscale/github-action@v2
+        with:
+          authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
+          tags: tag:ci
+          hostname: gha-be-staging
+
       - name: Upload artifact to server
         uses: appleboy/scp-action@v0.1.7
         with:
